# sophron-credence-public

./: .gitignore  README.md  pyproject.toml
human_validation/: attention_checks.jsonl  build_validation_samples.py  human_judge_app.py
human_validation/judgments/: alejandro.jsonl
results/validation/: monotonicity.parquet
src/credence/: __init__.py
src/credence/core/: export.py  schemas.py  util.py
src/credence/viz/: app.py  constants.py  data.py  formatting.py  human_judge.py  stats.py
src/credence/viz/tabs/: beliefs.py  calibration.py  coherence.py  explore_inspect.py  explore_inspect_attrs.py  inspect_tab.py  judge_agreement.py  known_group.py  model_agreement.py  monotonicity.py  negation.py  sensitivity.py  test_retest.py
