[project]
name = "sophron-public-apps"
version = "0.1.0"
description = "Interactive dashboards for Sophron Research AI evaluation results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "plotly",
    "polars",
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
]

[tool.hatch.build.targets.wheel]
packages = ["src/credence"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
